k8s/game-server/PW-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: cscawley/fivem
          ports:
            - containerPort: 30120
          volumes:
            - name: asset-storage
              persistentVolumeClaim:
                claimName: pw-asset-persistent-volume-claim
          volumeMounts:
            - name: asset-storage
              mountPath: /server-data/resources
              subPath: assets
