k8s/game-server/fivem-stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fivem-stateful
  namespace: fivem
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pw-fivem
  serviceName: "fivem-service"
  template:
    metadata:
      labels:
        app: pw-fivem
    spec:
      containers:
      - name: fivem-server
        image: purpleworld/game
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "4000m"
            memory: "4Gi"
          requests:
            cpu: "1000m"
            memory: "1Gi"
        ports:
          - containerPort: 40120
            protocol: TCP
          - containerPort: 30125
            protocol: TCP
          - containerPort: 30125
            protocol: UDP
        volumeMounts:
          - name: resource-storage
            mountPath: /txData
  volumeClaimTemplates:
  - metadata:
      name: resource-storage
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 20Gi
      storageClassName: do-block-storage
