k8s/game-server/fivem-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fivem-cluster-ip-service
  namespace: fivem
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 30120
      targetPort: 30120
