k8s/game-server/fivem-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fivem-service
  namespace: fivem
spec:
  type: NodePort
  selector:
    app: pw-fivem
  ports:
    - name: fivem-tcp
      port: 30125
      targetPort: 30125
      protocol: TCP
      nodePort: 30125
    - name: fivem-udp
      port: 30125
      targetPort: 30125
      protocol: UDP
      nodePort: 30125
